# api/app/Http/Controllers/Controller.php
@@ -7,16 +7,20 @@ use Illuminate\Foundation\Bus\DispatchesJobs;
 use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Routing\Controller as BaseController;
 
- /**
-     * @OA\Info(
-     *   title="Example API",
-     *   version="1.0",
-     *   @OA\Contact(
-     *     email="support@example.com",
-     *     name="Support Team"
-     *   )
-     * )
-     */
+/**
+ * @OA\Info(
+ *   title="API DECEA",
+ *   version="1.0",
+ * )
+ * @OA\SecurityScheme(
+ *   description="Login with email and password to get the authentication token",
+ *   in="header",
+ *   type="http",
+ *   scheme="bearer",
+ *   bearerFormat="JWT",
+ *   securityScheme="bearer",
+ * )
+ */
 class Controller extends BaseController
 {
     use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
